# Hitchcock

./: .env.example  .env.template  .gitignore  README.md  client.py  control_plane.py  generate_story_video.py  pyproject.toml  requirements.txt  run_db_dele.sh  run_script_writer.py  streamlit_test.py  test_image_service.py  test_scene_composition.py
agents/audio/: eleven_labs_service.py  models.py  prompt.py  storage.py  test.py  tools.py
agents/dop/: client.py  generate_story_video.py  image_service.py  prompt.py  tools.py
agents/dop/models/: assets.py  base.py  scene.py
agents/dop/services/: image.py  storage.py  video.py
agents/script_writer/: __init__.py  agent.py  prompt.py  research_agent.py  research_agent_tools.py  tools.py
agents/script_writer/scripts/: mdconvert.py
agents/story_boarder/: db_client.py  models.py  prompt.py  storage.py  tools.py
config/: settings.py
data/script_writer/: script.txt
data/storyboard/: storyboard.db
demo_server/: README.md  main.py
demo_server/static/: index.html
frontend/: package-lock.json  tsconfig.app.tsbuildinfo
frontend/src/pages/editor/: AgentSelector.tsx  ChatMessage.tsx  chat-interface.tsx  editor.tsx
models/: __init__.py  scene.py
output/metadata/: character_1_gears_20250222_184950.json  character_2_shouldered_20250222_184950.json  character_3_picks_20250222_184950.json  character_4_tall_20250222_184950.json  character_5_muscular_20250222_184950.json
services/: image.py  scene_composition_service.py  video.py
sessions/: audio.json  dop.json  story_boarder.json  story_writer.json
