[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hitchcock"
version = "0.1.0"
description = "Multi Agent Systems for Movie Creaton"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Hitchcock Team"}]

dependencies = [
    "modal",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "moviepy",
    "numpy",
    "pillow",
    "opencv-python-headless",
    "av",
    "python-magic",
    "boto3",
    "aiofiles",
    "fsspec"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "models",
    "services",
    "config",
    "scripts"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "."
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = ["E501"]  # line length violations

[tool.ruff.isort]
known-first-party = ["models", "services", "config", "scripts"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
